--- a/ansible/setup_pipeline.yaml
+++ b/ansible/setup_pipeline.yaml
@@ -10,10 +10,10 @@
   tasks:
     # Step 1: Update and Upgrade System
     - name: Update and upgrade packages
-      shell: sudo apt update -y && sudo apt upgrade -y
-      # apt:
-      #   update_cache: yes
-      #   upgrade: dist
+      # shell: sudo apt update -y && sudo apt upgrade -y
+      apt:
+        update_cache: yes
+        upgrade: dist
 
     # Step 2: Install Common Tools
     - name: Install required tools
