--- a/home/user/homelab/ansible/configure-static-ip.yml
+++ b/home/user/homelab/ansible/configure-static-ip.yml
@@ -4,7 +4,7 @@
   hosts: all
   become: yes
   vars:
-    static_ip: "172.18.243.116/20"
+    static_ip: "172.18.243.116"
     netmask: "255.255.240.0"
     gateway: "172.26.144.1"
     dns_servers:
@@ -41,7 +41,7 @@
             ethernets:
               {{ interface_name }}:
                 addresses:
-                  - {{ static_ip }}/24
+                  - {{ static_ip }}/20
                 routes:
                   - to: default
                     via: {{ gateway }}
