ignore errors git

--- a/home/user/homelab/ansible/setup_git_clone.yaml
+++ b/home/user/homelab/ansible/setup_git_clone.yaml
@@ -15,6 +15,7 @@
         name: git
         state: present
         update_cache: yes
+      ignore_errors: true
 
     # Step 2: Clone repository
     - name: Clone Git repository
