adjust python app repo

--- a/ansible/setup_git_clone.yaml
+++ b/ansible/setup_git_clone.yaml
@@ -33,8 +33,8 @@
         version: "{{ repo_version }}"
         clone: yes
         update: yes
-      become: false  # Run as regular user if needed
-      # become_user: devops
+      become: yes  # Run as regular user if needed
+      become_user: devops
 
     # Step 3: Set repository permissions (optional)
     - name: Set repository ownership
