Update install_python.yml to ignore pip errors
Added ignore_errors option for pip installation.

--- a/home/user/homelab/ansible/install_python.yml
+++ b/home/user/homelab/ansible/install_python.yml
@@ -41,6 +41,7 @@
         name: pip
         state: latest
         executable: pip3
+      ignore_errors: yes
 
     - name: Create symbolic link for python (optional)
       file:
