--- a/ansible/install_python_deps.yml
+++ b/ansible/install_python_deps.yml
@@ -7,3 +7,4 @@
       pip:
         requirements: /opt/homelab/requirements.txt
         executable: pip3
+        extra_args: --break-system-packages
