--- a/ansible/create_and_deploy_docker.yml
+++ b/ansible/create_and_deploy_docker.yml
@@ -34,3 +34,12 @@
         build:
           path: /opt/homelab
         state: present
+
+    - name: Run Docker container
+      docker_container:
+        name: python-app
+        image: python-app:v1
+        state: started
+        restart_policy: always
+        ports:
+          - "8090:5000"
