--- a/ansible/create_and_deploy_docker.yml
+++ b/ansible/create_and_deploy_docker.yml
@@ -37,11 +37,5 @@
         state: present
 
     - name: Run Docker container
-      docker_container:
-        name: python-app
-        image: python-app:v1
-        state: started
-        restart_policy: always
-        ports:
-          - "8080:5000"
+      shell: docker run -d --name python-app --restart always -p 8080:5000 python-app:v1
       
